--- a/SignUpPage.html
+++ b/SignUpPage.html
@@ -5,7 +5,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cosmo/bootstrap.min.css" rel="stylesheet" integrity="sha384-qdQEsAI45WFCO5QwXBelBe1rR9Nwiss4rGEqiszC+9olH1ScrLrMQr1KmDR964uZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="all" href="css/styles.css" />
     <script src="jquery.js"></script>
-    <script src="login_options.js"></script>
+    <script src="backendFunctionality.js"></script>
 </head>
 <body>
        <div class="pannel" >
@@ -42,7 +42,7 @@
                         <div class="col-md-12">
                             <div class="text-center"> 
                                 <label>Alredy a member?</label>
-                                <a href = "logPage.html">Login</a>
+                                <a href = "loginPage.html">Login</a>
                              </div>
                         </div>
                     </div> 
