--- a/contact_us_page.html
+++ b/contact_us_page.html
@@ -4,7 +4,7 @@
         <title>Contact Us</title>
         <link rel="stylesheet" type="text/css" media="all" href="css/contact_us_page_style.css" />
         <script src="jquery.js"></script>
-        <script src="login_options.js"></script>
+        <script src="backendFunctionality.js"></script>
     </head>
     <body >
         <div class="container">
