--- a/loginPage.html
+++ b/loginPage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="css/styles.css" />
 
     <script src="jquery.js"></script>
-    <script src="login_options.js"></script>
+    <script src="backendFunctionality.js"></script>
 </head>
 <body>
        <div class="pannel" >
