--- a/loginPage.html
+++ b/loginPage.html
@@ -38,7 +38,7 @@
                             <input id="inpPassword" type="password" class="form-control" placeholder="Enter Password"/>
                         </div>
                         <div class="row align-items-center remember">
-                            <input type="checkbox" onclick="showPassword()">Show Password
+                            <input type="checkbox" onclick="showPassword('login')">Show Password
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Login" class="btn float-right login_btn" onclick="return validateFields('login')">
